[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinapy"
version = "0.2.0rc4"
description = "DINA Web Services - Python library for interacting with the DINA web services"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "AAFC-BICoE" }]
keywords = ["DINA", "API", "AAFC", "BICoE", "JSON:API"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "jsonschema>=4.0.0",
  "Jinja2>=3.1.0",
  "lxml>=5.1.0",
  "pydantic>=2.6",
  "pydantic-core>=2.20",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
  "python-keycloak>=4.0.0",
  "pyyaml>=6.0",
  "certifi>=2023.7.22",
  "wrapt>=1.14.1",
  "tqdm>=4.65.0"
]

[project.optional-dependencies]
notebook = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.0.0",
  "matplotlib>=3.6.0",
  "pandas>=1.5.0",
  "numpy>=1.23.0"
]

test = [
  "fastjsonschema>=2.21.2",
  "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/AAFC-BICoE/dina-py"
Issues   = "https://github.com/AAFC-BICoE/dina-py/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["dinapy*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
dinapy = ["**/*.yml", "**/*.yaml", "**/*.json"]